# lib/db/src/schema/index.ts
@@ -8,3 +8,4 @@ export * from "./flights";
 export * from "./accounting";
 export * from "./gds-settings";
 export * from "./currency";
+export * from "./website-config";
